--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14619,7 +14619,7 @@ iframe {
 
 .travel-review {
   margin: 60px 0;
-  padding: 0 50px 40px;
+  padding:  50px 40px;
   display: inline-flex !important;
   flex-direction: column;
   text-align: center;
